@@ -1165,6 +1165,11 @@ sendbackup: info end
 | x
 | x
 | x
+| x
+| x
+| x
+| x
+| x
 \\--------
 913 lines follow, see the corresponding log.* file for the complete list
 \\--------
