@@ -1,3 +1,7 @@
+2011-11-10  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Report.pm: Always report the first 100 strange lines.
+	* installcheck/catalogs/longstrange.cat: Fix test.
+
 2011-11-09  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amreport.pl: Fix for perl-5.14
 	* installcheck/amreport.pl: Add test.
